processor/src/test/resources/model/bad/MethodWithoutObjectModel.java
package io.logansquarex.processor.bad;

import io.logansquarex.core.annotation.OnJsonParseComplete;

public class MethodWithoutObjectModel {


    @OnJsonParseComplete
    public void onParseComplete() {

    }

}
